--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "scripts": {
     "sass-watch":"sass --no-source-map --watch sass/main.scss style.css",
     "sass-build": "sass --no-source-map sass/main.scss style.css --style compressed"
+  },
+  "devDependencies": {
+    "sass": "^1.81.0"
   }
 }
